deployments/apps/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  namespace: moneeda-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: library.ippai-games.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: library-app-service
                port:
                  number: 3000
  tls:
    - hosts:
        - library.ippai-games.com
      secretName: echo-tls-library
